src/scss/stratifi/_app-btn.scss
.btn {
  font-weight: $btn-font-weight;
  @include transition(all .2s);

  &:not(.text-title) {
    letter-spacing: .1rem;
  }

  &-icon {
    padding: 0.45em 0.7em;
    @include border-radius(100em);
  }

  &-title {
    padding: $btn-padding-y-xxxlg $btn-padding-x-xxxlg;
    text-transform: uppercase;
  }

  &.disabled,
  &:disabled {
    opacity: .6;
  }

  &-group {
    .nowrap {
      display: flex;
    }
  }

  .btn-group & {
    font-size: $font-size-sm;

    &-secondary {
      border-color: $graphite-light;
    }
  }

  &-fixed-width {
    min-width: 204px;
  }

  &.btn-lg {
    font-size: $font-size-h5;
    line-height: 1.7;
  }

  &-muted {
    @extend .btn-secondary;
    border-color: $graphite-dark;
    color: $graphite-dark;

    &:active,
    &.active,
    &:focus,
    &.focus,
    &:hover,
    &.hover {
      border-color: $graphite-light;
      background: $graphite-light;
      color: white;
    }

    &.disabled,
    &:disabled {
      &:hover,
      &.hover {
        color: $graphite-dark;
      }
    }
  }

  &-black {
    border-color: $graphite-dark;
    background: $graphite-dark;

    &:active,
    &.active,
    &:focus,
    &.focus,
    &:hover,
    &.hover {
      border-color: $gray-dark;
      background: $gray-dark;
    }
  }
}

